# Utix

./: .gitignore  CMakeLists.txt  README.md
Utix/: CMakeLists.txt
Utix/include/Utix/: Alloc.h  Alloc_t.h  Assert.h  BaseTraits.h  CliOpts.h  Color.h  Common.h  DLoader.h  Exceptions.h  Ints.h  Log.h  Malloc.h  Memory.h  NotNull.h  PodVector.h  Process.h  RWrap.h  Restrict.h  ScopeExit.h  Timer.h  Traits.h  Vector.h  Vector2.h
Utix/src/: Alloc.cpp  CMakeLists.txt  CliOpts.cpp  Common.cpp
Utix/src/Test/: CMakeLists.txt  test.cpp
Utix/src/Utix/: Alloc.cpp  CMakeLists.txt  CliOpts.cpp  Common.cpp  DLoader.cpp  Log.cpp  Process.cpp
UtixJNI/jni/: Android.mk  Application.mk
Xlib/: CMakeLists.txt
Xlib/include/Xlib/: Alloc.h  Assert.h  BaseTraits.h  CliOpts.h  Common.h  DLoader.h  Ints.h  Log.h  Memory.h  Process.h  RWrap.h  ScopeExit.h  Timer.h  Traits.h  Vector.h  Vector2.h
Xlib/src/: Alloc.cpp  CMakeLists.txt  CliOpts.cpp  Common.cpp  DLoader.cpp  Log.cpp  Process.cpp
utix_android_project/jni/: Android.mk  Application.mk
vc/: .gitignore
vc/Utix/: Utix.sln  Utix.vcxproj  Utix.vcxproj.filters
vc/Utix/Debug/: Utix.idb  Utix.lib
vc/Utix/Debug/Utix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Utix.lastbuildstate  lib.command.1.tlog
vc/Utix/Release/Utix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Utix.lastbuildstate  lib.command.1.tlog
vc/Utix/UtixTests/: UtixTests.vcxproj  UtixTests.vcxproj.filters
vc/Utix/UtixTests/Debug/: vc140.idb
vc/Utix/UtixTests/Debug/UtixTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UtixTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
